[gd_scene load_steps=3 format=3 uid="uid://dseyd2b17usyp"]

[ext_resource type="Script" path="res://Screens/MainMenuScreens/options_scene.gd" id="1_0mo4h"]
[ext_resource type="PackedScene" uid="uid://f77t4dd6qskq" path="res://Screens/BaseUIScene.tscn" id="2_td7q7"]

[node name="OptionsScene" type="Node2D"]
script = ExtResource("1_0mo4h")

[node name="BaseUiScene" parent="." instance=ExtResource("2_td7q7")]

[node name="VBoxContainer" parent="BaseUiScene" index="0"]
offset_left = 38.0
offset_top = 33.0
offset_bottom = 733.0

[node name="Title" parent="BaseUiScene/VBoxContainer" index="0"]
text = "Options"

[node name="Label" type="Label" parent="BaseUiScene/VBoxContainer" index="1"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "game options

(TODO options here)"
autowrap_mode = 3

[node name="GridContainer" type="GridContainer" parent="BaseUiScene/VBoxContainer" index="2"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Resolution Label" type="Label" parent="BaseUiScene/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Resolution
"

[node name="Resolution OptionButton" type="OptionButton" parent="BaseUiScene/VBoxContainer/GridContainer"]
layout_mode = 2
item_count = 5
popup/item_0/text = "640x480"
popup/item_1/text = "800x600"
popup/item_1/id = 1
popup/item_2/text = "1024x768"
popup/item_2/id = 2
popup/item_3/text = "1280x1024"
popup/item_3/id = 3
popup/item_4/text = "1600x900"
popup/item_4/id = 4

[node name="Fullscreen Label" type="Label" parent="BaseUiScene/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Fullscreen
"

[node name="Fullscreen CheckBox" type="CheckBox" parent="BaseUiScene/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="VSync Label" type="Label" parent="BaseUiScene/VBoxContainer/GridContainer"]
layout_mode = 2
text = "VSync
"

[node name="VSync CheckBox" type="CheckBox" parent="BaseUiScene/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Sound Volume Label" type="Label" parent="BaseUiScene/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Sound Volume
"

[node name="Sound Volume HSlider" type="HSlider" parent="BaseUiScene/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Music Volume Label" type="Label" parent="BaseUiScene/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music Volume
"

[node name="Music Volume HSlider" type="HSlider" parent="BaseUiScene/VBoxContainer/GridContainer"]
layout_mode = 2

[connection signal="pressed" from="BaseUiScene/VBoxContainer/HBoxContainer/OK Button" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="BaseUiScene/VBoxContainer/HBoxContainer/Cancel Button" to="." method="_on_cancel_button_pressed"]

[editable path="BaseUiScene"]
